# ai-nutritionist

./: .dockerignore  .gitignore  DATA_CARD.md  Dockerfile  MODEL_CARD.md  README.md  SECURITY.md  app.py  cli.py  constraints-runtime.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
ai_nutritionist/: __init__.py  api.py  cli.py  constants.py  data.py  evaluation.py  feedback.py  guidelines.py  metrics.py  optimizer.py  plan_outputs.py  preferences.py  presentation.py  profile.py  ranker.py  recipes.py  recommender.py  scoring.py
ai_nutritionist/ui/: __init__.py  app.py  components.py  config.py  state.py  tabs.py
data/: README.md  foods_catalog.csv  mediterranean_foods.csv
data/huggingface/: README.md  food_ranker_items.csv
data/recipes/: README.md  recipe_ingredients.csv  recipe_sources.csv  recipes.csv
docs/: ARCHITECTURE.md  EVALUATION.md  GUIDELINE_ALIGNMENT.md  HYBRID_RECOMMENDER_V2.md  RECIPE_DATA_CONTRACT.md  RESEARCH.md
docs/demo/: README.md
docs/deployment/: STREAMLIT_COMMUNITY_CLOUD.md  huggingface-space-README.md
docs/screenshots/: README.md
scripts/: build_food_catalog.py  streamlit_smoke.py
tests/: test_api.py  test_cli.py  test_evaluation_matrix.py  test_feedback_store.py  test_guideline_alignment.py  test_keto_bodyfat_score.py  test_metrics.py  test_neural_recommender.py  test_planner_v2.py  test_preferences.py  test_project_readiness.py  test_public_payloads.py  test_recipe_data_contract.py  test_recommender.py  test_streamlit_ui_contract.py  test_system_recommender.py  test_targets_and_scoring.py  test_usda_catalog.py
tests/fixtures/recipes/: recipe_ingredients.csv  recipe_sources.csv  recipes.csv
