[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-nutritionist"
version = "0.5.0"
description = "Local-first nutrition planning system with deterministic ranking, Hybrid V2 optimization, and guardrails."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Arsenios Diamantakos" }
]
dependencies = [
  "fastapi>=0.115,<1",
  "pandas>=2.2,<4",
  "pydantic>=2.7,<3",
  "scikit-learn>=1.4,<2",
  "streamlit>=1.50,<2",
  "uvicorn>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.11",
  "pytest>=8.0",
  "ruff>=0.8"
]

[project.scripts]
ai-nutritionist = "ai_nutritionist.cli:main"
ai-nutritionist-api = "ai_nutritionist.api:main"

[tool.setuptools.packages.find]
include = ["ai_nutritionist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
allow_untyped_defs = true
warn_unused_ignores = false
disable_error_code = ["import-untyped"]
